force-app/main/default/objects/Lead_Competitor__c/Lead_Competitor__c.object-meta.xml
<CustomObject>
    <description>Joining object between lead and competitor</description>
    <label>Lead Competitor</label>
    <nameField>
        <displayFormat>LC-{000}</displayFormat>
        <label>Lead Competitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>