force-app/main/default/objects/Lead_Competitor__c/fields/Lead_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Email__c</fullName>
    <label>Lead Owner Email</label>
    <type>Email</type>
</CustomField>